--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>hi! this is my silly web site.</h1>
-<a href="http://192.168.1.11:8080/">my art.</a>
+<a href="http://110.164.204.242:13812//">my art.</a>
